@@ -1,5 +1,8 @@
 Change Log
 
+05/18/09
+1. Updated robots.txt file contents.
+
 03/25/09
 1. Page link manager is upgraded to 1.0b.
 2. Cleaning up file structure of plugin zip.
